# git-lines

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cliff.toml  deny.toml  flake.nix
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: validate-design.md
docs/: plan.md  test-cases.md
docs/corpus/: 01-addition-patches.md  01-single-addition.md  02-contiguous-additions.md  02-deletion-patches.md  03-non-contiguous-additions.md  03-replacement-patches.md  04-deletion.md  04-multi-hunk-patches.md  05-multi-file-patches.md  05-selective-from-mixed.md  06-multiple-files.md  06-no-newline-patches.md  07-deletion-range.md  08-multiple-hunks-same-file.md  09-out-of-order-staging.md  10-single-command-multiple-hunks.md  11-no-trailing-newline.md  README.md  behavior-line-stability.md
proptest-regressions/diff/: full.txt  hunk.txt
scripts/: verify-invariants.sh
skills/git-lines/: SKILL.md
src/: diff.rs  lib.rs  main.rs  parse.rs  patch.rs
src/diff/: file.rs  full.rs  hunk.rs  mod.rs
src/snapshots/: git_stager__diff__tests__format_diff_contiguous_additions.snap  git_stager__diff__tests__format_diff_mixed_operations.snap  git_stager__diff__tests__format_diff_multiple_files.snap  git_stager__diff__tests__format_diff_non_contiguous_hunks.snap  git_stager__diff__tests__format_diff_single_addition.snap  git_stager__diff__tests__format_diff_single_deletion.snap  git_stager__tests__format_diff_contiguous_additions.snap  git_stager__tests__format_diff_mixed_operations.snap  git_stager__tests__format_diff_multiple_files.snap  git_stager__tests__format_diff_non_contiguous_hunks.snap  git_stager__tests__format_diff_single_addition.snap  git_stager__tests__format_diff_single_deletion.snap
tests/: e2e_test.rs
tests/snapshots/: e2e_test__addition__addition__complex_range_mix__diff.snap  e2e_test__addition__addition__complex_range_mix__staged.snap  e2e_test__addition__addition__contiguous_range__diff.snap  e2e_test__addition__addition__contiguous_range__staged.snap  e2e_test__addition__addition__from_mixed_hunk__diff.snap  e2e_test__addition__addition__from_mixed_hunk__staged.snap  e2e_test__addition__addition__multiple_separate__staged.snap  (+136 more)
(+1 files in other folders)
