[package]
name = "git-stager"
version = "0.1.0"
edition = "2024"
description = "Non-interactive git hunk staging tool"
license = "MIT"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
error_set = "0.9.0"

[dev-dependencies]
git2 = "0.20.2"
insta = { version = "1.43.2", features = ["json"] }
tempfile = "3.23.0"
