[package]
name = "git-stager"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Omegaice"]
description = "Non-interactive git hunk staging tool"
license = "MIT"
repository = "https://github.com/Omegaice/git-stager"
readme = "README.md"
keywords = ["git", "staging", "cli", "version-control", "diff"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "cliff.toml",
    "flake.nix",
    "flake.lock",
]

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.60"
error_set = "0.9.0"

[dev-dependencies]
git2 = "0.20.2"
insta = { version = "1.43.2", features = ["json"] }
tempfile = "3.23.0"
